# mujoco_ros2_moveit2_fr3

./: .gitignore  MUJOCO_LOG.TXT  README.md
src/fr3_application/: package.xml  setup.cfg  setup.py
src/fr3_application/config/: moveit_cpp.yaml
src/fr3_application/fr3_application/: fr3grasp.py  grasp.py  gripperController.py  pointcloud.py
src/fr3_application/launch/: grasp.launch.py  world_camera.launch.py
src/fr3_moveit_config/: package.xml  setup.cfg  setup.py
src/fr3_moveit_config/config/: fr3.srdf  fr3.urdf  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  sensors_3d.yaml
src/fr3_moveit_config/launch/: moveit.launch.py
src/fr3_moveit_config/rviz/: rviz.rviz
src/fr3_perception/: package.xml  setup.cfg  setup.py
src/fr3_perception/fr3_perception/: camera_tf.py  pointcloud.py
src/fr3_perception/launch/: world_camera.launch.py
src/fr3_perception/utils/: trans.py
src/fr3_sim/: package.xml  setup.cfg  setup.py
src/fr3_sim/config/: fr3_mujoco.xml  pid_gains.yaml  ros2_controllers.yaml  scene.xml
src/fr3_sim/fr3_sim/: camera_tf.py  mujoco_obstacle_pub.py
src/fr3_sim/launch/: fr3_sim.launch.py
src/fr3_sim/rviz/: sim.rviz
src/fr3_sim/urdf/: fr3.urdf  fr3.urdf.xacro
src/franka_description/: .gitignore  CHANGELOG.rst  README.md  package.xml
src/franka_description/.docker/: visualize_franka_duo.entrypoint.sh
src/franka_description/end_effectors/common/: franka_hand.xacro
src/franka_description/end_effectors/franka_hand/: franka_hand.srdf.xacro
src/franka_description/launch/: visualize_franka.launch.py  visualize_franka_duo.launch.py
src/franka_description/meshes/accessories/fr3_duo_mount/collision/: fr3_duo_cover.stl  fr3_duo_mount.stl
src/franka_description/meshes/accessories/fr3_duo_mount/visual/: fr3_duo_cover.dae
src/franka_description/meshes/robot_ee/franka_hand_black/collision/: finger.stl
src/franka_description/meshes/robot_ee/franka_hand_black/visual/: finger.stl
src/franka_description/meshes/robot_ee/franka_hand_white/collision/: finger.stl
src/franka_description/robots/common/: franka_arm.ros2_control.xacro  franka_arm.srdf.xacro  franka_arm.xacro  franka_robot.xacro  group_definition.xacro  utils.xacro
src/franka_description/robots/fer/: fer.srdf.xacro  fer.urdf.xacro
src/franka_description/robots/fp3/: fp3.srdf.xacro  fp3.urdf.xacro
src/franka_description/robots/fr3/: fr3.srdf.xacro  fr3.urdf.xacro
src/franka_description/robots/fr3_duo/: fr3_duo.urdf.xacro  fr3_duo_arm.urdf.xacro  fr3_duo_fixed_structure.urdf.xacro
src/franka_description/robots/fr3_duo/fr3_duo_mount/: fr3_duo_mount.xacro  inertials.yaml  kinematics.yaml
src/franka_description/robots/fr3v2/: accelerometers.yaml  fr3v2.srdf.xacro  fr3v2.urdf.xacro  inertials.yaml  joint_limits.yaml
src/franka_description/robots/fr3v2.1/: fr3v2.1.srdf.xacro  fr3v2.1.urdf.xacro  inertials.yaml
src/franka_description/rviz/: visualize_franka_duo.rviz
src/franka_description/scripts/: create_urdf.py  visualize_franka_duo.sh
src/franka_description/test/: urdf_tests.py
src/mujoco_ros2_control/: .clang-format  .dockerignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  colcon_defaults.yaml  docker-compose.yml  mujoco_system_interface_plugin.xml  package.xml  pixi.toml
src/mujoco_ros2_control/.github/workflows/: pre-release.yml
src/mujoco_ros2_control/docker/: Dockerfile  entrypoint.sh
src/mujoco_ros2_control/docs/: DEVELOPMENT.md  TOOLS.md
src/mujoco_ros2_control/include/mujoco_ros2_control/: data.hpp  mujoco_cameras.hpp  mujoco_lidar.hpp  mujoco_system_interface.hpp  utils.hpp
src/mujoco_ros2_control/resources/: scene.xml
src/mujoco_ros2_control/scripts/: find_missing_inertias.py  make_mjcf_from_robot_description.py  robot_description_to_mjcf.sh
src/mujoco_ros2_control/src/: mujoco_cameras.cpp  mujoco_lidar.cpp  mujoco_ros2_control_node.cpp  mujoco_system_interface.cpp
src/mujoco_ros2_control/test/: CMakeLists.txt  test_plugin.cpp
src/mujoco_ros2_control/test/config/: controllers.yaml  mujoco_pid.yaml  start_positions.xml  test_robot.rviz
src/mujoco_ros2_control/test/launch/: test_robot.launch.py
src/mujoco_ros2_control/test/src/: robot_launch_mjcf_generation_from_robot_description_test.py  robot_launch_mjcf_generation_test.py  robot_launch_pid_test.py  robot_launch_test.py  robot_launch_tranmission_pid_test.py  robot_launch_transmission_test.py
src/mujoco_ros2_control/test/test_resources/: scene.xml  scene_info.xml  test_inputs.xml  test_robot.urdf  test_robot.xml
src/mujoco_ros2_control/test/test_resources/test_pid/: scene_pid.xml  test_robot_pid.xml
