<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fr3_sim</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zhoudaoyuan@todo.todo">zhoudaoyuan</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>xacro</depend>
  <depend>franka_description</depend>
  <depend>mujoco_ros2_control</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>mujoco_py</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
